# esim-mailer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  codecov.yml
.github/workflows/: audit.yml  build-and-release.yml  build.yml  coverage.yml  pr-checks.yml  rust-clippy.yml
src/: args.rs  email.rs  embedded.rs  gui.rs  lib.rs  main.rs  oauth.rs  templates.rs
templates/: email_template.html  nomad.html  test.html
