[package]
name = "esim-mailer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
eframe = "0.30.0"
lettre = "0.11.11"
oauth2 = { version = "5.0", features = ["reqwest-blocking"] }
once_cell = "1.20.2"
rand = "0.9.0"
rfd = "0.15.2"
serde = "1.0.217"
serde_json = "1.0.137"
sha2 = "0.10.8"
thiserror = "2.0.11"
url = "2.5.2"
webbrowser = "1.0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
aes-gcm = "0.10.3"
dotenv = "0.15.0"
rand = "0.9.0"
winres = "0.1.12"
