[package]
name = "esim-mailer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
eframe = "0.31.1"
lettre = "0.11.15"
oauth2 = { version = "5.0", features = ["reqwest-blocking"] }
once_cell = "1.21.3"
rand = "0.9.1"
rfd = "0.15.3"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
url = "2.5.2"
webbrowser = "1.0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
aes-gcm = "0.10.3"
dotenvy = "0.15.7"
rand = "0.9.1"
winres = "0.1.12"
